libs/modkit-canonical-errors/tests/ui/missing_reason_on_permission_denied.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<modkit_canonical_errors::builder::ResourceAbsent, modkit_canonical_errors::builder::NeedsReason>`, but its trait bounds were not satisfied
  --> tests/ui/missing_reason_on_permission_denied.rs:10:55
   |
10 |     let _err = UserResourceError::permission_denied().create();
   |                                                       ^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: src/builder.rs
   |
   | pub struct NeedsReason;
   | ---------------------- doesn't satisfy `_: ContextResolved`
   |
   = note: the following trait bounds were not satisfied:
           `modkit_canonical_errors::builder::NeedsReason: modkit_canonical_errors::builder::ContextResolved`
